# AI_basics_assessment_project_24

./: .gitignore  ColorClassifier.py  README-archive.md  README.md  RGB_classifier.ipynb  classiffier.py  classifier.ipynb  classy.ipynb  p.py  planning.ipynb  pyproject.toml
AI_basics_assessment_project_24/: README.md  pyproject.toml
